<resources>
    <string name="app_name">Shopiko 01</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_product">Add Product</string>
    <string name="home">Home</string>
    <string name="catalog">Catalog</string>
    <string name="profile_page">Profile</string>
    <string name="sell_page">Sell</string>
    <string name="analytics">Analytics</string>

    <!--    Sell page string resources-->
    <string name="product">Product</string>
    <string name="quantity">Quantity</string>
    <string name="enter_qty">Enter Qty</string>
    <string name="qty_in_stock">Qty: %1$d</string>
    <string name="add_to_sell">Add to sell</string>
    <string name="sell_list">Sell list</string>
    <string name="sell">Sell</string>
    <string name="to_add_fragment">To add fragment</string>

    <!--    Add product page string resources-->
    <string name="product_name_placeholder">Product name</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="category">Category</string>
    <string name="enter_category">Enter category</string>
    <string name="product_description">Product description</string>
    <string name="c_p">C.P</string>
    <string name="s_p">S.P</string>
    <string name="product_quantity">Product quantity</string>
    <string name="enter_profit_percentage">Enter profit percentage</string>
    <string name="percentage_symbol">%</string>
    <string name="percentage_text">is your total percentage per product sold</string>
    <string name="note_msg">Note: The field above reflect the profit to be made per product sold</string>

    <!--    View product page string resources-->
    <string name="percentage_profit">Percentage profit</string>
    <string name="description">Description</string>
    <string name="jargon">You can generate up to 50 random English words at a time. To get more words, just click the “Generate Words” button to generate a new list of words. Note that the selected words in the textarea will still be there even after you click the “Generate Words” button</string>
    <string name="edit">Edit</string>
    <string name="splash_screen_cart_image">splash screen cart image</string>
    <string name="shopiko">Shopiko</string>
    <string name="create_shop">Create Shop</string>
    <string name="login">Login</string>
    <string name="request_page_image">Request page image</string>
    <string name="hey_there">Hey, there!</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="sign_in">sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="shop_name">Shop name</string>
    <string name="enter_your_shop_name">Enter your shop name</string>
    <string name="retype_password">Retype password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="title_activity_authetication">AutheticationActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="profile">Profile</string>
    <string name="enter_product_quantity">Enter product quantity</string>
    <string name="sign_out">Sign out</string>
    <string name="update_item">Update</string>
    <string name="delete">Delete</string>
    <string name="total_price">Total price : %1$s</string>
    <string name="good_day">Good Day</string>
    <string name="create_a_new_category">Create a new category</string>
    <string name="click_here">Click Here</string>
    <string name="items_going_out_of_stock">Items going out of stock</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="choose_category">Choose category</string>
    <string name="add_to_category">Add to Category</string>
    <string name="items_with_highest_sales">Items with the highest sales in this category</string>
    <string name="best_selling_items">Best selling items</string>
    <string name="least_selling_items">Least Selling Items</string>
    <string name="your_email">Your Email :</string>
    <string name="sales_history">Sales History</string>
    <string name="update_profile">Update profile</string>
    <string name="log_out">Log Out</string>
    <string name="my_category">My Category</string>
    <string name="enter_your_name">Full Name</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="sales_transaction">Sales Transaction</string>
    <string name="buyer_name">Buyer\'s Name</string>
    <string name="item_name">Item Name</string>
    <string name="cumulative_quantity">Cumulative Quantity</string>
    <string name="profit">Profit</string>
    <string name="transaction_performance">Performed on : %1$s</string>

    <!--    Spinner items-->
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

</resources>