<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/catalogFragment"
        android:title="@string/catalog"
        android:icon="@drawable/ic_inventory"/>

    <item
        android:id="@+id/sellPageFragment"
        android:title="@string/sell_page"
        android:icon="@drawable/ic_sell"/>

    <item
        android:id="@+id/analyticsPageFragment"
        android:title="@string/analytics"
        android:icon="@drawable/ic_analytics"/>

    <item
        android:id="@+id/profilePageFragment"
        android:title="@string/profile_page"
        android:icon="@drawable/ic_profile"/>

</menu>