<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/parent_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authetication.SignInFragment">

    <ImageView
        android:id="@+id/sign_in_page_image"
        android:layout_width="105dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_auth_question_screen"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/request_page_image" />

    <TextView
        android:id="@+id/sign_in_page_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/deep_green_500"
        android:textStyle="bold"
        android:text="@string/hey_there"
        app:layout_constraintTop_toBottomOf="@id/sign_in_page_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_in_page_email_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/white"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@id/sign_in_page_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_in_page_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_in_page_password_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/white"
        android:layout_marginTop="@dimen/text_margin"
        app:layout_constraintTop_toBottomOf="@id/sign_in_page_email_text_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_in_page_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_page_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/sign_in"
        android:textSize="16sp"
        app:cornerRadius="@dimen/parent_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_page_password_text_layout" />

    <TextView
        android:id="@+id/sign_in_page_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginStart="@dimen/between_element"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintTop_toBottomOf="@id/sign_in_page_btn"
        app:layout_constraintStart_toStartOf="@id/sign_in_page_btn" />

    <TextView
        android:id="@+id/sign_in_page_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_shop"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toTopOf="@id/sign_in_page_question"
        app:layout_constraintStart_toEndOf="@id/sign_in_page_question" />

</androidx.constraintlayout.widget.ConstraintLayout>