<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/parent_padding"
    tools:context=".authetication.RequestFragment">

    <ImageView
        android:id="@+id/request_page_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_auth_question_screen"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/request_page_image" />

    <TextView
        android:id="@+id/splash_page_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:textColor="@color/deep_green_500"
        android:textStyle="bold"
        android:text="@string/shopiko"
        app:layout_constraintTop_toBottomOf="@id/request_page_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/request_page_create_shop"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:text="@string/create_shop"
        android:textSize="16sp"
        app:cornerRadius="@dimen/parent_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_page_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/request_page_login"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/text_margin"
        android:text="@string/login"
        android:textSize="16sp"
        app:cornerRadius="@dimen/parent_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/request_page_create_shop" />

</androidx.constraintlayout.widget.ConstraintLayout>