<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/parent_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authetication.SignUpFragment">

    <TextView
        android:id="@+id/sign_up_shop_name"
        style="@style/Widget.Shopiko01.MediumPlaceHolderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shop_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_page_shop_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/white"
        android:layout_marginTop="@dimen/between_element"
        app:layout_constraintTop_toBottomOf="@id/sign_up_shop_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_page_shop_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/enter_your_shop_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/sign_up_email"
        style="@style/Widget.Shopiko01.MediumPlaceHolderText"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        app:layout_constraintTop_toBottomOf="@id/sign_up_page_shop_name_layout"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_page_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/white"
        android:layout_marginTop="@dimen/between_element"
        app:layout_constraintTop_toBottomOf="@id/sign_up_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_page_email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/sign_up_password"
        style="@style/Widget.Shopiko01.MediumPlaceHolderText"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintTop_toBottomOf="@id/sign_up_page_email_layout"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_page_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/white"
        android:layout_marginTop="@dimen/between_element"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/sign_up_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_page_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/sign_up_re_password"
        style="@style/Widget.Shopiko01.MediumPlaceHolderText"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retype_password"
        app:layout_constraintTop_toBottomOf="@id/sign_up_page_password_layout"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_page_re_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/white"
        android:layout_marginTop="@dimen/between_element"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/sign_up_re_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_page_re_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_page_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/create_shop"
        android:textSize="16sp"
        app:cornerRadius="@dimen/parent_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_page_re_password_layout" />

    <TextView
        android:id="@+id/sign_up_page_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginStart="@dimen/between_element"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:text="@string/already_have_an_account"
        app:layout_constraintTop_toBottomOf="@id/sign_up_page_btn"
        app:layout_constraintStart_toStartOf="@id/sign_up_page_btn" />

    <TextView
        android:id="@+id/sign_up_page_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toTopOf="@id/sign_up_page_question"
        app:layout_constraintStart_toEndOf="@id/sign_up_page_question" />

</androidx.constraintlayout.widget.ConstraintLayout>